# ghwt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PROMPT-LAYOUT.md  QUICKSTART.md  README.md  WT_TASK_TEMPLATE.md  __init__.py  config.py  github_fetcher.py  logging_config.py  main.py  models.py  pyproject.toml  pytest.ini  template_renderer.py  worktree_creator.py
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml  general_task.yaml
docs/: E2E_TEST_DEBT.md
tests/: AGENTS.md  conftest.py  test_logging_config.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_github_integration.py  test_worktree_creator_integration.py
tests/unit/: test_cli.py  test_config.py  test_git_remote_detection.py  test_prompt_passing.py  test_template_validation.py  test_url_parsing.py  test_worktree_automation.py  test_worktree_creator.py
